--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ button:hover {
 }
 
 #question-body {
-  /* display: none; */
+  display: none;
   font-size: 20px;
   width: 100%;
 }
@@ -73,5 +73,10 @@ button:hover {
 }
 .radio-sub:hover {
   background-color: gray;
-  width: 20%;
+  width: 2 0%;
+}
+
+.time {
+  text-align: center;
+  font-size: 20px;
 }
