--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,9 @@ button:hover {
   text-align: center;
   font-size: 20px;
 }
+
+.question-result {
+  font-style: italic;
+  font-weight: 10px;
+  color: red;
+}
