adding DS_store to gitignore

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ button:hover {
   display: flex;
   flex-direction: row;
   font-size: 14pt;
-  justify-content: space-around;
+  justify-content: space-evenly;
   text-align: center;
 }
 
